test/jzas/symboltable/invalid/fail03.asm
var1:	equ 99
var1:	defl 0
